운동차트 같이 보는거, 디폴트 선 추가

--- a/styles.css
+++ b/styles.css
@@ -139,3 +139,12 @@ h2 {
     background-color: #0984e3;
     color: #fff;
 }
+
+.together {
+    border: 1px solid #dbdbdb;
+    padding: 10px;
+}
+.together.clicked {
+    background-color: #0984e3;
+    color: #fff;
+}
